application/webapp/helm/ingress-gke.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: webapp-tls
    hosts:
      - webapp.prod.weisiminpeng.com
  rules:
  - host: webapp.prod.weisiminpeng.com
    http:
      paths: 
      - path: /
        backend:
          serviceName: webapp-svc
          servicePort: 80
